# virga

./: .drone.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  codeship-services.yml  codeship-steps.yml  codeship.env  docker-compose.yaml  env  harbor-dockercfg.encrypted  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
review_list_page/: Caddyfile  docker-compose.yaml
review_list_page/api/: Dockerfile  dev-services.env  pyproject.toml
review_list_page/api/alembic/: env.py
review_list_page/api/alembic/versions/: 46f4bfd14138_added_submission_table.py
review_list_page/api/review_list_page/: app.py  settings.py  submissions.py
review_list_page/api/review_list_page/database/models/: __init__.py  base.py  submission_meta.py
review_list_page/api/scripts/: dev-server.sh  run_tests.sh
review_list_page/webui/: Dockerfile  package.json  snowpack.config.js
review_list_page/webui/public/: index.html
review_list_page/webui/public/js/: app-config.js
review_list_page/webui/src/: index.tsx
review_list_page/webui/src/app/base/AppChrome/: AppChrome.styles.ts  index.ts  menu.tsx
review_list_page/webui/src/app/base/AppCrash/: AppCrash.styles.ts  index.ts
review_list_page/webui/src/app/base/FourOhFour/: FourOhFour.tsx  index.ts
review_list_page/webui/src/app/base/NoAccess/: NoAccess.tsx
review_list_page/webui/src/app/base/Router/: Router.tsx  routes.ts
review_list_page/webui/src/app/modules/auth/components/Panel/: Panel.tsx
review_list_page/webui/src/app/modules/auth/pages/Account/: Account.tsx
review_list_page/webui/src/app/modules/auth/pages/Login/: Login.styles.ts
review_list_page/webui/src/app/modules/review/pages/: List.styles.ts  List.tsx  ListTable.styles.ts  SearchField.styles.tsx
review_list_page/webui/src/app/modules/user/: store.ts
review_list_page/webui/src/app/utils/: hooks.ts
review_list_page/webui/types/: css.d.ts
scripts/: entrypoint.sh  run_lints.sh  run_tests.sh
tests/: conftest.py  test_graphql.py  test_noct.py  test_secure_tokens.py
tests/cli/: test_utils.py  test_virga.py
tests/cli/templates/: mockfile.txt.template
tests/integration/: conftest.py  test_database.py  test_graphql.py  test_noct.py
tests/plugins/: conftest.py  test_database.py  test_extra_missing.py  test_graphql.py  test_graphql_sessioned.py  test_noct.py  test_secure_tokens.py
tests/unit/: test_secure_tokens.py
virga/_cli/: application.py  utils.py
virga/_cli/generators/: __init__.py  auth.py  base.py  database.py  deployment.py  graphql.py  structure.py  webui.py
virga/_cli/templates/: noct.patch
virga/_cli/templates/auth/: Caddyfile.patch  app-config.patch.template  app.patch  docker-compose.patch  docker-compose.patch.template  nginx-conf.patch  noct.patch  webroute.patch
virga/_cli/templates/boilerplate/: Caddyfile  Caddyfile.template  README.md  docker-compose.yaml.template  run.sh
virga/_cli/templates/boilerplate/api/: .gitignore  Dockerfile.template  dev-services.env  pyproject.toml
virga/_cli/templates/boilerplate/api/boilerplate/: app.py  settings.py.template
virga/_cli/templates/boilerplate/api/scripts/: dev-server.sh.template  entrypoint.sh  entrypoint.sh.template  prestart.sh  run_tests.sh
virga/_cli/templates/boilerplate/boilerplate/: app.py
virga/_cli/templates/boilerplate/nginx/: Dockerfile  app-indico-local.conf
virga/_cli/templates/database/: Dockerfile.patch  alembic.ini  app.patch  prestart.patch  settings.patch
virga/_cli/templates/database/alembic/: env.py.template
virga/_cli/templates/database/database/: __init__.py  __init__.py.template  models.py  schemas.py
virga/_cli/templates/database/database/models/: __init__.py  base.py  widget.py
virga/_cli/templates/database/database/schemas/: widget.py
virga/_cli/templates/deployment/k8s/auth/: api-configs.yaml.patch  api-secrets.yaml.patch  values.yaml.patch
virga/_cli/templates/deployment/k8s/auth/webui/: ui-app-config.yaml.patch  values.yaml.patch
virga/_cli/templates/deployment/k8s/boilerplate/: Chart.yaml.template  values.yaml.template
virga/_cli/templates/deployment/k8s/boilerplate/templates/: api-configs.yaml  api-secrets.yaml  api.yaml
virga/_cli/templates/deployment/k8s/database/: api-configs.yaml.patch  api-secrets.yaml.patch  values.yaml.patch
virga/_cli/templates/deployment/k8s/database/templates/: postgres.yaml  volumes.yaml
virga/_cli/templates/deployment/k8s/webui/: values.yaml.patch
virga/_cli/templates/deployment/k8s/webui/templates/: ui-app-config.yaml  ui-nginx-conf.yaml  ui-ssl-cert.yaml  ui.yaml
virga/_cli/templates/deployment/standalone/: Dockerfile.patch
virga/_cli/templates/graphql/: app.patch  gql.py  graphql.patch  query.py
virga/_cli/templates/webui/: Caddyfile.patch  docker-compose.patch.template  nginx-conf.patch
virga/_cli/templates/webui/boilerplate/: .dockerignore  .gitignore  Dockerfile  Dockerfile.template  README.md  package.json  package.json.template  snowpack.config.js  tsconfig.json
virga/_cli/templates/webui/boilerplate/public/: index.html
virga/_cli/templates/webui/boilerplate/public/js/: app-config.js
virga/_cli/templates/webui/boilerplate/scripts/: dev-server.sh  docker-dev-server.sh
virga/_cli/templates/webui/boilerplate/types/: global.d.ts
virga/cli/: application.py  utils.py
virga/cli/generators/: __init__.py  auth.py  base.py  structure.py
virga/cli/templates/: noct.patch
virga/cli/templates/boilerplate/: Dockerfile.template  pyproject.toml  pyproject.toml.template
virga/cli/templates/boilerplate/boilerplate/: app.py
virga/cli/templates/boilerplate/scripts/: entrypoint.sh
virga/plugins/database/: __init__.py
virga/plugins/graphql/: __init__.py  graphiql.html  graphql.py  route.py  sessioned.py
virga/plugins/noct/: README.md  __init__.py  errors.py  handler.py  noct.py  typing.py  user.py
virga/plugins/secure_cookies/: __init__.py  secure_cookies.py
virga/plugins/testing/: noct.py
virga/requests/: noct.py  secure_cookies.py
virga/types/: user.py
(+20 files in other folders)
