[tool.poetry]
name = "virga"
version = "1.2.0"
description = "Templated adaptable sidecar app generation."
authors = ["thearchitector <elias.gabriel@indicodata.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.0"
patch = "^1.16"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
graphene = "^2.1.8"
orjson = "^3.5.0"
fastapi = "^0.63.0"
SQLAlchemy = "^1.4"
alembic = "^1.5.5"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
mypy = {version = "^0.942", optional = true}
black = {version = "^22.3.0", optional = true}

[tool.poetry.dev-dependencies]
asyncpg = "^0.22.0"
pytest = "^6.2.4"
pytest-asyncio = "^0.18.3"
requests = "^2.27.1"
aiofiles = "^0.8.0"

[tool.poetry.scripts]
virga = "virga._cli.application:virga"

[tool.poetry.extras]
linting = ["mypy", "black"]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
show_column_numbers = true
follow_imports = "silent"
warn_unreachable = true
plugins = "sqlalchemy.ext.mypy.plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
