[tool.poetry]
name = "virga"
version = "1.3.2"
description = "Templated adaptable sidecar app generation."
authors = ["Elias Gabriel <elias.gabriel@indicodata.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65.2"
orjson = "^3.5.0"

click = {version = "8.1.0", optional = true}
patch = {version = "1.16", optional = true}

python-jose = {extras = ["cryptography"], version = "^3.2.0", optional = true}
aiohttp = {extras = ["speedups"], version = "^3.8.1", optional = true}

graphene = {version = "^2.1.8", optional = true}
aiofiles = {version = "^0.8.0", optional = true}
aiodataloader = {version = "^0.2.1", optional = true}

SQLAlchemy = {version = "^1.4.35", optional = true}
alembic = {version = "^1.5.5", optional = true}
asyncpg = {version = "^0.25.0", optional = true}

pytest = {version = ">=3.0.0", optional = true}
requests = {version="^2.27.1", optional = true}

[tool.poetry.extras]
cli = ["click", "patch"]
auth = ["python-jose", "aiohttp"]
graphql = ["graphene", "aiofiles", "aiodataloader"]
database = ["SQLAlchemy", "alembic", "asyncpg"]
testing = ["pytest", "requests"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.18.3"
requests = "^2.27.1"


[tool.poetry.scripts]
virga = "virga._cli.application:virga"


[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
show_column_numbers = true
follow_imports = "silent"
warn_unreachable = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
