[tool.poetry]
name = "virga"
version = "1.4.1"
description = "Dynamic IPA sidecar app generation and plugins."
authors = ["Elias Gabriel <elias.gabriel@indicodata.ai>"]
readme = "virga/_cli/templates/boilerplate/README.md"
include = ["CHANGELOG.md"]


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
orjson = "^3.5.0"

patch = {version = "1.16", optional = true}
typer = {version = "0.9.0", optional = true}
rich = {version = ">=10.11.0,<14.0.0", optional = true}

python-jose = {extras = ["cryptography"], version = "^3.2.0", optional = true}
aiohttp = {extras = ["speedups"], version = "^3.8.1", optional = true}

graphene = {version = "^2.1.8", optional = true}
aiofiles = {version = "^0.8.0", optional = true}
aiodataloader = {version = "^0.2.1", optional = true}

SQLAlchemy = {version = "~1.4.35", optional = true}
alembic = {version = "^1.5.5", optional = true}
asyncpg = {version = "^0.25.0", optional = true}

pytest = {version = ">=3.0.0", optional = true}
requests = {version="^2.27.1", optional = true}

[tool.poetry.extras]
cli = ["typer", "patch", "rich"]
auth = ["python-jose", "aiohttp"]
graphql = ["graphene", "aiofiles", "aiodataloader"]
database = ["SQLAlchemy", "alembic", "asyncpg"]
testing = ["pytest", "requests"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.18.3"
requests = "^2.27.1"


[tool.poetry.scripts]
virga = "virga._cli.application:virga"

[tool.pytest.ini_options]
addopts = "-ra -svv"
asyncio_mode = "auto"
testpaths = [
    "tests"
]

[tool.ruff]
ignore = ["D205", "D400"]

[tool.mypy]
strict = true
warn_return_any = true
show_column_numbers = true
warn_unreachable = true
explicit_package_bases = true
check_untyped_defs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
