[tool.poetry]
name = "$app_name"
version = "0.1.0"
description = "A Virga-based Indico side application."
authors = []

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
indico-client = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
