[tool.poetry]
name = "$app_name"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = "^0.14.0"
uvloop = "^0.15.2"
httptools = "^0.2.0"
gunicorn = "^20.1.0"
virga = {git = "https://github.com/IndicoDataSolutions/virga.git", rev = "main"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
watchgod = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
