[tool.poetry]
name = "$app_name"
version = "0.0.1"
description = "A default Virga application."
authors = []

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
